--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body {
-	background-color:#0E0E0E;
-	text-align:center;
+  background-color: #0E0E0E;
+  text-align: center;
   color: #FFFFFF;
   font-family: sans-serif;
   font-size: 13px;
   margin: 0px;
+  padding: 2rem;
 }
 
-a, a:visited {
+a,
+a:visited {
   color: #9D9D9D;
   text-decoration: none;
 }
@@ -17,14 +19,22 @@ a:hover {
 }
 
 .pixelated {
-  image-rendering:optimizeSpeed;             /* Legal fallback */
-  image-rendering:-moz-crisp-edges;          /* Firefox        */
-  image-rendering:-o-crisp-edges;            /* Opera          */
-  image-rendering:-webkit-optimize-contrast; /* Safari         */
-  image-rendering:optimize-contrast;         /* CSS3 Proposed  */
-  image-rendering:crisp-edges;               /* CSS4 Proposed  */
-  image-rendering:pixelated;                 /* CSS4 Proposed  */
-  -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
+  image-rendering: optimizeSpeed;
+  /* Legal fallback */
+  image-rendering: -moz-crisp-edges;
+  /* Firefox        */
+  image-rendering: -o-crisp-edges;
+  /* Opera          */
+  image-rendering: -webkit-optimize-contrast;
+  /* Safari         */
+  image-rendering: optimize-contrast;
+  /* CSS3 Proposed  */
+  image-rendering: crisp-edges;
+  /* CSS4 Proposed  */
+  image-rendering: pixelated;
+  /* CSS4 Proposed  */
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE8+           */
 }
 
 canvas {
@@ -34,9 +44,4 @@ canvas {
 
 .controls {
   margin: 10px;
-}
-
-.title {
-  text-align: center;
-  margin: 20px;
 }
